2006-11-23  Simon Budig  <simon@gimp.org>

	* app/display/gimpcanvas.c: Change the color for XOR drawing. This
	guarantees that there is always a contrast between the original
	image pixels and the stuff drawn on top of it.

2006-11-23  Michael Natterer  <mitch@gimp.org>

	* data/images/gimp-splash.png: new splash. Image taken by Kristian
	Rietveld; Retouching by Simon Budig and myself.

2006-11-23  Michael Natterer  <mitch@gimp.org>

	* app/pdb/gimpprocedure.c (gimp_procedure_validate_args): made
	validation error messages more human-readable and prepared the
	code for validating return values.

2006-11-23  Sven Neumann  <sven@gimp.org>

	* app/pdb/gimpprocedure.c (gimp_procedure_validate_args): special
	case invalid drawable and image IDs and try to give a somewhat
	more helpful error message (addresses bug #378334).

2006-11-23  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/image.pdb: marked the new functions as new in 2.4.

	* app/pdb/image_cmds.c
	* libgimp/gimpimage_pdb.c: regenerated.

2006-11-22  Simon Budig  <simon@gimp.org>

	* tools/pdbgen/pdb/image.pdb: Added functions to easily determine
	the position of a layer/channel/vectors object in its respective
	stack.

	* libgimp/gimp.def: added new symbols

	* app/pdb/image_cmds.c
	* app/pdb/internal_procs.c
	* libgimp/gimpimage_pdb.[ch]: regenerated.

2006-11-22  Simon Budig  <simon@gimp.org>

	* app/tools/gimpvectortool.c: Enable scrolling while dragging
	the nodes of a path. Fix warning when deleting the last node
	of a stroke.

2006-11-22  Michael Natterer  <mitch@gimp.org>

	* app/actions/actions.c (action_select_property): add support for
	G_TYPE_INT properties.

	* app/actions/tools-actions.c
	* app/actions/tools-commands.[ch]: add actions and callback which
	affect the foreground select tool's stroke-width property.

	* app/tools/gimpforegroundselecttool.c: map tool-action-value-2
	(tool tip size) to the new action.

	* app/tools/gimppaintoptions-gui.c: fixed visibility of the brush